# back_logisty

./: .env.example  pyproject.toml
apps/contrat/: apps.py  models.py  serializers.py  views.py
apps/core/: drf_yasg_config.py
apps/expressRequest/: apps.py
apps/invoice/: models.py  serializers.py  urls.py  views.py
apps/invoice/migrations/: 0001_initial.py
apps/sendingRequest/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py  views_fleet_assignment.py
apps/sendingRequest/migrations/: 0001_initial.py  0002_alter_sendingrequest_status_and_more.py  0003_alter_sendingrequest_priority_and_more.py  0004_remove_sendingrequest_payment_method_and_more.py
apps/subscription/: models.py  serializers.py  urls.py  view_subscription.py  views_subscription_plan.py
apps/subscription/migrations/: 0001_initial.py  0002_alter_subscriptionplan_price.py  0003_rename_duration_days_subscriptionplan_duration_month.py  0004_subscription.py
apps/truck/: apps.py  models.py  serializers.py  urls.py  views.py
apps/truck/migrations/: 0001_initial.py  0002_alter_truck_mileage_alter_truck_year.py  0003_alter_truck_max_load_capacity_alter_truck_notes.py
apps/users/: authentication.py  factories_individual_client.py  models.py  serializers.py  user_urls.py  views_admin.py  views_chief_fleet.py  views_client_company.py  views_driver.py  views_driverChef_request.py  views_individual_client.py
apps/users/migrations/: 0001_initial.py  0002_alter_driver_driving_license_alter_user_role.py  0004_chieffleet_company_address.py  (+7 more)
config/: settings.py  urls.py
tests/: tests.py
